tests/baselines/reference/tsxStatelessFunctionComponents2.errors.txt
file.tsx(13,2): error TS2564: Property 'greeting' has no initializer and is not definitely assigned in the constructor.
file.tsx(21,16): error TS2322: Type '{ ref: string; }' is not assignable to type 'IntrinsicAttributes & { name?: string | undefined; }'.
  Property 'ref' does not exist on type 'IntrinsicAttributes & { name?: string | undefined; }'.
file.tsx(27,42): error TS2551: Property 'subtr' does not exist on type 'string'. Did you mean 'substr'?
file.tsx(29,33): error TS2339: Property 'notARealProperty' does not exist on type 'BigGreeter'.
file.tsx(37,26): error TS2339: Property 'propertyNotOnHtmlDivElement' does not exist on type 'HTMLDivElement'.


==== file.tsx (5 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    function Greet(x: {name?: string}) {
    	return <div>Hello, {x}</div>;
    }
    
    class BigGreeter extends React.Component<{ name?: string }, {}> {
    	render() {
    		return <div></div>;
    	}
    	greeting: string;
    	~~~~~~~~
!!! error TS2564: Property 'greeting' has no initializer and is not definitely assigned in the constructor.
    }
    
    // OK
    let a = <Greet />;
    // OK - always valid to specify 'key'
    let b = <Greet key="k" />;
    // Error - not allowed to specify 'ref' on SFCs
    let c = <Greet ref="myRef" />;
                   ~~~
!!! error TS2322: Type '{ ref: string; }' is not assignable to type 'IntrinsicAttributes & { name?: string | undefined; }'.
!!! error TS2322:   Property 'ref' does not exist on type 'IntrinsicAttributes & { name?: string | undefined; }'.
    
    
    // OK - ref is valid for classes
    let d = <BigGreeter ref={x => x.greeting.substr(10)} />;
    // Error ('subtr' not on string)
    let e = <BigGreeter ref={x => x.greeting.subtr(10)} />;
                                             ~~~~~
!!! error TS2551: Property 'subtr' does not exist on type 'string'. Did you mean 'substr'?
!!! related TS2728 lib.es5.d.ts:--:--: 'substr' is declared here.
    // Error (ref callback is contextually typed)
    let f = <BigGreeter ref={x => x.notARealProperty} />;
                                    ~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'notARealProperty' does not exist on type 'BigGreeter'.
    
    // OK - key is always valid
    let g = <BigGreeter key={100} />;
    
    // OK - contextually typed intrinsic ref callback parameter
    let h = <div ref={x => x.innerText} />;
    // Error - property not on ontextually typed intrinsic ref callback parameter
    let i = <div ref={x => x.propertyNotOnHtmlDivElement} />;
                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'propertyNotOnHtmlDivElement' does not exist on type 'HTMLDivElement'.
    
    